-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 15
-
Component/s: hotspot
-
b21
-
Verified
Running: numactl -m 0 -N 0 /localhome/javas/jdk-15-ootb/bin/java -XX:+UseNUMA -XX:+ForceNUMA -version
This guarantee is triggered:
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (g1NUMAStats.cpp:34), pid=23874, tid=23877
# guarantee(num_nodes > 1) failed: Number of nodes (1) should be set
#
# JRE version: (15.0) (build )
# Java VM: Java HotSpot(TM) 64-Bit Server VM (15-internal+0-2020-03-28-1614273.stefan.johansson.hs, mixed mode, sharing, tiered, compressed oops, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x66185f] G1NUMAStats::NodeDataArray::NodeDataArray(unsigned int)+0xdf
#
# Core dump will be written. Default location: /localhome/tests/gc-test-suite-2/core.23874
#
# An error report file with more information is saved as:
# /localhome/tests/gc-test-suite-2/hs_err_pid23874.log
#
#
Aborted (core dumped)
This guarantee is triggered:
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (g1NUMAStats.cpp:34), pid=23874, tid=23877
# guarantee(num_nodes > 1) failed: Number of nodes (1) should be set
#
# JRE version: (15.0) (build )
# Java VM: Java HotSpot(TM) 64-Bit Server VM (15-internal+0-2020-03-28-1614273.stefan.johansson.hs, mixed mode, sharing, tiered, compressed oops, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x66185f] G1NUMAStats::NodeDataArray::NodeDataArray(unsigned int)+0xdf
#
# Core dump will be written. Default location: /localhome/tests/gc-test-suite-2/core.23874
#
# An error report file with more information is saved as:
# /localhome/tests/gc-test-suite-2/hs_err_pid23874.log
#
#
Aborted (core dumped)
- relates to
-
JDK-8243961 ForceNUMA and only one available NUMA node fails assertion on Windows
-
- Closed
-
-
JDK-8237643 VM initialization fails with -XX:+UseNUMA if only one processor is available (_SC_NPROCESSORS_ONLN = 1)
-
- Closed
-
-
JDK-8243628 Deprecate -XX:ForceNUMA option
-
- Resolved
-
-
JDK-8046153 JEP 163: Enable NUMA Mode by Default When Appropriate
-
- Draft
-