8242459: ForceNUMA and only one available NUMA node hits a guarantee

Fix some asserts to handle the single-NUMA node + ForceNUMA case.

Reviewed-by: sjohanss, tschatzl